# pekabeaver

./: .gitignore  .gitlab-ci.yml  .gitmodules  AssetTypes.hs  Assets.hs  Exporter.hs  LICENSE  Main.hs  README.md  all.min.js  all_min.js  index.html  pekabeaver.cabal  stack.yaml  testcollada.html
assets/: beaver.DAE  field.DAE  field.vertices  index.html  peka.DAE  styles.css
ldj32/: index.html
ldj32/assets/: field.DAE  field.indices  styles.css
