name:                pekabeaver
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable pekabeaver
  main-is:             Main.hs
  other-modules:       Assets, AssetTypes
  -- other-extensions:    
  build-depends:       base, bytestring, flaw-app, flaw-asset, flaw-base, flaw-build, flaw-ffi, flaw-graphics, flaw-math, flaw-input, flaw-window, mtl, pretty-show, random, stm, template-haskell, text, transformers, vector
  -- hs-source-dirs:      
  default-language:    Haskell2010
  if impl(ghcjs)
    build-depends:       ghcjs-base

executable exporter
  main-is:             Exporter.hs
  build-depends:       base, bytestring, flaw-asset, flaw-build, flaw-ffi, flaw-graphics, flaw-math, template-haskell, transformers, vector
  default-language:    Haskell2010
