name:                pekabeaver
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable pekabeaver
  main-is:             Main.hs
  other-modules:       Assets
  -- other-extensions:    
  build-depends:       base, bytestring, flaw-app, flaw-base, flaw-build, flaw-collada, flaw-ffi, flaw-graphics, flaw-math, flaw-input, flaw-visual, flaw-window, mtl, random, stm, template-haskell, text, transformers, vector
  -- hs-source-dirs:      
  default-language:    Haskell2010
  if impl(ghcjs)
    build-depends:       ghcjs-base
