name:                pekabeaver
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  if !impl(ghcjs)
    other-modules:       Assets
  build-depends:       base, flaw-app, flaw-asset, flaw-collada, flaw-visual, template-haskell
  -- hs-source-dirs:      
  default-language:    Haskell2010

executable pekabeaver
  main-is:             Main.hs
  other-modules:       
  -- other-extensions:    
  build-depends:       base, bytestring, flaw-app, flaw-asset, flaw-base, flaw-graphics, flaw-math, flaw-input, flaw-visual, flaw-window, mtl, random, stm, text, transformers
  -- hs-source-dirs:      
  default-language:    Haskell2010
  if impl(ghcjs)
    build-depends:       ghcjs-base
